objects/Product_Promotion__c/Product_Promotion__c.object-meta.xml
<CustomObject>
    <description>The Product Promotion object allows a product manager to create a promotional offer for either a single product or a single product line.

Business owner: Lindsey Reich</description>
    <label>Product Promotion</label>
    <nameField>
        <label>Product Promotion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Promotions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>