objects/Product_Promotion__c/fields/Include_in_Routing__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Routing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Approval</label>
    <type>Checkbox</type>
</CustomField>