objects/Product_Promotion__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>This field is populated by the Product Promotion - Before Insert - Fast Field Updates flow, where the product name is pushed into the field so that we can easily enforce uniqueness in the promotion name</description>
    <label>Name</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>