objects/Product_Promotion__c/fields/Promo_Group__c.field-meta.xml
<CustomField>
    <fullName>Promo_Group__c</fullName>
    <description>An open text field that can be used for grouping in reports and analytics. Requested by Lindsey Reich</description>
    <inlineHelpText>This is an open text field that can be used for grouping in reports and analytics</inlineHelpText>
    <label>Promo Group</label>
    <length>100</length>
    <type>Text</type>
</CustomField>