objects/Product_Promotion__c/fields/Promo_Product__c.field-meta.xml
<CustomField>
    <fullName>Promo_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>You can either choose a product or a product line for this promo. By selecting a product you will not be able to select a product line</inlineHelpText>
    <label>Promo Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Promotions</relationshipLabel>
    <relationshipName>Product_Promotions</relationshipName>
    <type>Lookup</type>
</CustomField>