objects/Product_Promotion__c/fields/Promo_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Promo_Product_Line__c</fullName>
    <inlineHelpText>You can either choose a product or a product line for this promo. By selecting a product line you will not be able to select a product</inlineHelpText>
    <label>Promo Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All Product Lines</fullName>
            </value>
            <value>
                <fullName>Appliance</fullName>
            </value>
            <value>
                <fullName>Asset</fullName>
            </value>
            <value>
                <fullName>Asset Discovery &amp; Inventory</fullName>
            </value>
            <value>
                <fullName>Asset Discovery &amp; Inventory MM</fullName>
            </value>
            <value>
                <fullName>Authoring</fullName>
            </value>
            <value>
                <fullName>Bundle</fullName>
            </value>
            <value>
                <fullName>Chronicle</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Client Management</fullName>
            </value>
            <value>
                <fullName>Client Software Management</fullName>
            </value>
            <value>
                <fullName>Client Software Management MM</fullName>
            </value>
            <value>
                <fullName>Comply</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Connect</fullName>
            </value>
            <value>
                <fullName>Connection Manager</fullName>
            </value>
            <value>
                <fullName>Converge</fullName>
            </value>
            <value>
                <fullName>Core-LTD</fullName>
            </value>
            <value>
                <fullName>Core-SLP</fullName>
            </value>
            <value>
                <fullName>Core-UPG</fullName>
            </value>
            <value>
                <fullName>Cyware</fullName>
            </value>
            <value>
                <fullName>Deep Instinct</fullName>
            </value>
            <value>
                <fullName>Deploy</fullName>
            </value>
            <value>
                <fullName>Discover</fullName>
            </value>
            <value>
                <fullName>ELA</fullName>
            </value>
            <value>
                <fullName>Enforce</fullName>
            </value>
            <value>
                <fullName>ESR</fullName>
            </value>
            <value>
                <fullName>FIM</fullName>
            </value>
            <value>
                <fullName>Foundation</fullName>
            </value>
            <value>
                <fullName>Impact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>