objects/Product_Promotion__c/fields/Promotion_Document__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Document__c</fullName>
    <inlineHelpText>Information in this field will be included in the Quote PDF</inlineHelpText>
    <label>Promotion Document</label>
    <length>100</length>
    <type>Text</type>
</CustomField>