objects/Product_Promotion__c/fields/xxxProduct_Code__c.field-meta.xml
<CustomField>
    <fullName>xxxProduct_Code__c</fullName>
    <label>xxxProduct Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>