objects/Product_Promotion__c/validationRules/End_Date_Cannot_Be_Less_Than_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Cannot_Be_Less_Than_Start_Date</fullName>
    <active>true</active>
    <description>A user cannot be allowed to submit an end date that precedes the start date</description>
    <errorConditionFormula>End_Date__c &lt; Start_Date__c</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>The End Date cannot be before the Start Date. Please update the End Date to be later than the Start Date</errorMessage>
</ValidationRule>