objects/Product_Promotion__c/validationRules/Pick_either_a_product_or_a_product_Line.validationRule-meta.xml
<ValidationRule>
    <fullName>Pick_either_a_product_or_a_product_Line</fullName>
    <active>true</active>
    <description>If Promo Product not equal to null then Promo Product Line cannot be populated OR if Promo Product Line not equal to null then Promo Product cannot be populated</description>
    <errorConditionFormula>OR (
  
   AND (
       ISPICKVAL(Type__c,&quot;&quot;),
       ISBLANK(Promo_Product__c),
       ISPICKVAL(Promo_Product_Line__c,&quot;&quot;)
   ),
   AND (
       ISPICKVAL(Type__c,&quot;&quot;),
       NOT(ISBLANK(Promo_Product__c)), 
       NOT(ISPICKVAL(Promo_Product_Line__c,&quot;&quot;))
   )
)</errorConditionFormula>
    <errorMessage>Please select either a Product Line or a Product. You cannot add both a Product Line and a Product to a Product Promotion. You also can&apos;t leave both the Product Line and Product blank.</errorMessage>
</ValidationRule>