objects/Product_Promotion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Discount__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Promo_Product_Line__c</columns>
    <columns>Promotion_Document__c</columns>
    <columns>Include_in_Routing__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>