objects/Product_Promotion__c/listViews/All_Active.listView-meta.xml
<ListView>
    <fullName>All_Active</fullName>
    <booleanFilter>2 AND (1 OR 3)</booleanFilter>
    <columns>NAME</columns>
    <columns>Discount__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Promo_Product_Line__c</columns>
    <columns>Promotion_Document__c</columns>
    <columns>Include_in_Routing__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>End_Date__c</field>
        <operation>greaterThan</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Start_Date__c</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>End_Date__c</field>
        <operation>equals</operation>
    </filters>
    <label>All Active</label>
</ListView>